tests/baselines/reference/generatorTypeCheck17.errors.txt
generatorTypeCheck17.ts(1,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck17.ts(2,25): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck17.ts(4,5): error TS2322: Type 'undefined' is not assignable to type 'Foo'.


==== generatorTypeCheck17.ts (3 errors) ====
    class Foo { x: number }
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    class Bar extends Foo { y: string }
                            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    function* g(): IterableIterator<Foo> {
        yield;
        ~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Foo'.
        yield new Bar;
    }